<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/content_fragment_uCode8">
    <TextView
        android:id="@+id/uCode8_tvtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_xl_margin"
        android:text="@string/demo_tvtitle"
        android:textStyle="italic"
        android:textSize="16sp"
        android:textColor="@color/colorGray800"
        android:background="@drawable/gradient_color"/>
    <ListView
        android:id="@+id/uCode8_lvTags"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/uCode8_tvtitle"
        android:layout_above="@+id/uCode8_llbtm"
        android:background="@drawable/gradient_color_below"/>
    <LinearLayout
        android:id="@+id/uCode8_llbtm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_pager"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <CheckBox
            android:id="@+id/uCode8_checkbox_bi"
            android:layout_height="30dp"
            android:layout_width="wrap_content"
            android:layout_marginStart="@dimen/layout_xl_margin"
            android:layout_marginEnd="@dimen/layout_xl_margin"
            android:text="@string/uCode8_bi_enable"
            android:checked="true"
            android:textStyle="italic"/>
        <Spinner
            android:id="@+id/uCode8_spinner_mode"
            android:layout_height="40dp"
            android:layout_width="260dp"
            android:background="@drawable/spinner"
            android:layout_marginStart="@dimen/layout_h_margin"
            android:layout_marginEnd="@dimen/layout_xl_margin"/>
        <CheckBox
            android:id="@+id/uCode8_checkbox_epc_tid"
            android:layout_height="30dp"
            android:layout_width="wrap_content"
            android:layout_marginStart="@dimen/layout_xl_margin"
            android:layout_marginEnd="@dimen/layout_xl_margin"
            android:text="@string/uCode8_epc_tid"
            android:textStyle="italic"/>
        <CheckBox
            android:id="@+id/uCode8_checkbox_slotQ"
            android:layout_height="30dp"
            android:layout_width="wrap_content"
            android:layout_marginStart="@dimen/layout_xl_margin"
            android:layout_marginEnd="@dimen/layout_xl_margin"
            android:text="@string/demo_tv_slot"
            android:textStyle="italic"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Spinner
                android:id="@+id/uCode8_spinner_q"
                android:layout_height="40dp"
                android:layout_width="100dp"
                android:background="@drawable/spinner"
                android:layout_marginStart="@dimen/layout_h_margin" />

        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="11"
                android:orientation="vertical">
                <CheckBox
                    android:id="@+id/uCode8_cbProcess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layout_xxl_margin"
                    android:button="@drawable/checkbox_select" />
            </LinearLayout>

            <Button
                android:id="@+id/uCode8_btnStart"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="4"
                android:layout_marginEnd="@dimen/layout_xl_margin"
                android:text="@string/demo_btnStart"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>