<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/content_fragment_demo">
    <TextView
        android:id="@+id/demou_tvtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_xl_margin"
        android:text="@string/demo_tvtitle"
        android:textStyle="italic"
        android:textSize="16sp"
        android:textColor="@color/colorGray800"
        android:background="@drawable/gradient_color"/>
    <ListView
        android:id="@+id/demou_lvTags"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/demou_tvtitle"
        android:layout_above="@+id/ll02"
        android:background="@drawable/gradient_color_below"/>
    <LinearLayout
        android:id="@+id/ll02"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/gradient_pager">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:layout_marginStart="@dimen/layout_xl_margin"
                    android:gravity="end"
                    android:layout_gravity="center_vertical"
                    android:text="@string/demo_tvreadcount"
                    android:textColor="@color/colorGray800"
                    android:textStyle="italic"/>
                <TextView
                    android:id="@+id/demou_tvreadcount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/layout_xl_margin"
                    android:layout_weight="3"
                    android:textSize="18sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:layout_marginStart="@dimen/layout_xl_margin"
                    android:gravity="end"
                    android:layout_gravity="center_vertical"
                    android:text="@string/demo_tvtagcount"
                    android:textColor="@color/colorGray800"
                    android:textStyle="italic"/>
                <TextView
                    android:id="@+id/demou_tvtagcount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/layout_xl_margin"
                    android:layout_weight="3"
                    android:textSize="18sp"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/demou_btnStart"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="4"
            android:text="@string/demo_btnStart"
            android:textSize="16sp" />
        <Button
            android:id="@+id/demou_btnClear"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="4"
            android:text="@string/demo_btnClear"
            android:textSize="16sp" />
    </LinearLayout>
    <ProgressBar
        android:id="@+id/demou_progressBar"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/layout_xl_margin"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progressbar_48_holo"/>

</RelativeLayout>
