<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="3dp"
    android:paddingBottom="3dp">
    <TextView
        android:id="@+id/adapter_uCode8_tx"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="2dp"
        android:gravity="center"
        android:background="@color/colorBlue200"
        android:textSize="13dp"
        android:text="@string/common_adapter_tx"
        android:fontFamily="sans-serif-monospace"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/adapter_uCode8_rx"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="2dp"
        android:gravity="center"
        android:background="@color/colorPink200"
        android:textSize="13dp"
        android:text="@string/common_adapter_rx"
        android:fontFamily="sans-serif-monospace"
        android:textStyle="bold"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/adapter_uCode8_tx">
        <TextView
            android:id="@+id/adapter_uCode8_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="6"
            android:textSize="13dp"
            android:fontFamily="sans-serif-monospace"
            android:textStyle="italic"/>
        <LinearLayout
            android:id="@+id/adapter_uCode8_black_pc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="38dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:gravity="end"
                android:background="@color/colorIvory3"
                android:textSize="13sp"
                android:text="@string/demo_adapter_pc"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/adapter_uCode8_pc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:fontFamily="sans-serif-monospace"
                android:textStyle="italic"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/adapter_uCode8_black_epc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:orientation="horizontal"
            android:layout_below="@+id/adapter_uCode8_black_pc">
            <TextView
                android:layout_width="38dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="2dp"
                android:gravity="end"
                android:background="@color/colorAmber200"
                android:textSize="13sp"
                android:text="@string/demo_adapter_epc"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/adapter_uCode8_cpc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="5"
                android:textSize="13sp"
                android:fontFamily="sans-serif-monospace"
                android:textStyle="italic"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/adapter_uCode8_black_tid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:orientation="horizontal"
            android:layout_below="@+id/adapter_uCode8_black_epc">
            <TextView
                android:layout_width="38dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:gravity="end"
                android:background="@color/colorTeal200"
                android:textSize="12sp"
                android:text="@string/demo_adapter_tid"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/adapter_uCode8_tid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="5"
                android:textSize="13sp"
                android:fontFamily="sans-serif-monospace"
                android:textStyle="italic"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/adapter_uCode8_black_rn16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:orientation="horizontal"
            android:layout_below="@+id/adapter_uCode8_black_tid">
            <TextView
                android:layout_width="38dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:gravity="end"
                android:background="@color/colorSlateGray2"
                android:textSize="12sp"
                android:text="@string/demo_adapter_rn"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/adapter_uCode8_rn16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:fontFamily="sans-serif-monospace"
                android:textStyle="italic"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>