<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/content_fragment_ble">

    <TextView
        android:id="@+id/ble_tvMsgStatus"
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:layout_margin="@dimen/layout_xl_margin"
        android:gravity="center"
        android:background="@drawable/gradient_groupbox"
        android:textStyle="italic" />
    <ListView
        android:id="@+id/ble_lvDevice"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/layout_xl_margin"
        android:layout_below="@+id/ble_tvMsgStatus"
        android:layout_above="@+id/ble_llMTUChange_group"
        android:background="@drawable/gradient_color_below"/>
    <LinearLayout
        android:id="@+id/ble_llMTUChange_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ble_tvMsg"
        android:orientation="vertical">
        <TextView
            android:id="@+id/ble_tvMTUChange_title"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginTop="@dimen/layout_xl_margin"
            android:text="@string/ble_mtu_change_title"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            android:textColor="@color/colorGray800"
            android:background="@drawable/gradient_color"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/gradientx_color_below">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_margin="@dimen/layout_l_margin"
                android:focusable="true"
                android:focusableInTouchMode="true">
                <EditText
                    android:id="@+id/ble_tvMTUChange_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:hint="@string/ble_edit_mtu"
                    android:text="@string/ble_edit_mtu"
                    android:inputType="numberDecimal"
                    android:autofillHints="" />
                <Button
                    android:id="@+id/ble_btnMTUChange"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/ble_action_set"/>
            </LinearLayout>
            <TextView
                android:id="@+id/ble_tvMsg_MTU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_xl_margin"
                android:layout_marginEnd="@dimen/layout_xl_margin"
                android:textStyle="italic"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/ble_tvMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_xl_margin"
        android:layout_marginEnd="@dimen/layout_xl_margin"
        android:textStyle="italic"
        android:layout_above="@+id/ble_btnSearch" />
    <ProgressBar
        android:id="@+id/ble_progressBar"
        android:layout_centerInParent="true"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progressbar_48_holo"/>
    <Button
        android:id="@+id/ble_btnSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/ble_action_search"/>
</RelativeLayout>